<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="com.generalscan.sdkapp.ui.activity.usb.UsbSerialMainActivity" />
    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:id="@+id/layout_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_menu_normal"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/textview_device_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"
                    android:text="Device Model"
                    />
                <!--
                <LinearLayout
                    android:id="@+id/layout_device_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_path"
                        android:textColor="#cccccc" />

                    <TextView
                        android:id="@+id/textview_device_model"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1" />
                </LinearLayout>
                -->
                <LinearLayout
                    android:id="@+id/layout_device_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_manufacturer"
                        android:textColor="#cccccc" />

                    <TextView
                        android:id="@+id/textview_device_manufacturer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_device_vendor_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="Vendor ID"
                        android:textColor="#cccccc" />

                    <TextView
                        android:id="@+id/textview_device_vendor_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_device_product_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="Product ID"
                        android:textColor="#cccccc" />

                    <TextView
                        android:id="@+id/textview_device_product_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/button_connect"
                            style="@style/flat_button_info"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:onClick="@{(view) -> activity.onConnectButtonClick()}"
                            android:text="@string/B_Connect"
                            android:textSize="16sp"
                            android:visibility="gone"
                            />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_data_receive"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_menu_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/data_receiving"
                        android:textColor="#cccccc"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <!--adding a radio button -->
                        <RadioButton
                            android:id="@+id/radiobutton_ascii"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="4dp"
                            android:text="ASCII"
                            android:textAlignment="center"/>

                        <!--adding a radio button -->
                        <RadioButton
                            android:id="@+id/radiobutton_hex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:checked="false"
                            android:padding="4dp"
                            android:text="Hex"
                            android:textAlignment="center" />


                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_menu_normal"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/scrollView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fillViewport="true">

                        <EditText
                            android:id="@+id/edittext_receive_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_data_receive_box"
                            android:gravity="top"
                            android:hint="@string/data_received">

                            <requestFocus />
                        </EditText>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_menu_normal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/command_and_settings"
                        android:textColor="#cccccc"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edittext_command"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/B_SendContent" />

                        <Button
                            android:id="@+id/button_send_command"
                            style="@style/flat_button_success"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/B_Send"
                            android:onClick="@{(view) -> activity.onSendButtonClick()}"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>